llvm/test/tools/llubi/lib_free_stack.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare void @free(ptr)

define i32 @main() {
  %p = alloca i32, i32 1
  call void @free(ptr %p)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT:   %p = alloca i32, align 4 => ptr 0x8 [p]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @free(ptr %p) at @main
; CHECK-NEXT: Immediate UB detected: freeing a non-heap allocation at 0x8.
; CHECK-NEXT: error: Execution of function 'main' failed.
